# valabindgen

./: README.md  meson.build
app/: main.vala  meson.build
backend/: configuration.vala  meson.build  model.vala  modeldelegate.vala  modelenum.vala  modelfunction.vala  modelstruct.vala  utils.vala
doc/: planning.md
parser/: meson.build  parser.vala  sourcefile_generator.vala  typebuilder.vala
vapi/: clang.vapi
